# exp-42-kafkaiftastic-avalanche

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PR.txt  README.md  docker-compose.yml  pr-active  pr-timestamp.txt  pull_request.json  pyproject.toml
.github/actions/check-trigger/: action.yml
.github/actions/parse-commit/: action.yml
.github/actions/parse-pr-json/: action.yml
.github/workflows/: ci.yml  pr-automation.yml  pr-cleanup.yml  pr-manage.yml  release.yml
artifacts/: mission_template.json
src/: consumer.py  producer.py
tests/: test_dummy.py
tools/: build.py  fix_eof.py  fix_whitespace.py  format_json.py  format_markdown.py  format_python.py  format_yaml.py  lint.py  pre_commit_check.py  run_clean.py  run_consumer.py  run_producer.py  run_setup_githooks.py  test.py  validate_commit_msg.py  validate_pr_txt.py
