[project]
name = "exp-42-kafkaiftastic-avalanche"
version = "0.1.0"
description = "A Kafka pipeline in an Alpine container with AI artifacts"
authors = [
    {name = "Brain-X",email = "github@brain-x.io"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kafka-python (>=2.0.2,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0"
black = "^23.0"
pytest = "^7.0"
ruff = "^0.9.9"

[tool.black]
line-length = 79
skip-string-normalization = false  # Forceer consistente stringquotes (geen uitzonderingen)
target-version = ['py39']  # Stel een specifieke Python-versie in voor consistente opmaak

[tool.flake8]
max-line-length = 79
extend-ignore = []  # Geen extra uitzonderingen
select = "E,F,W"  # Consistente regels met ruff

[tool.ruff]
line-length = 79
fix = true

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []